# swiss_popular_voting

./: Cargo.toml  README.md
src/: constants.rs  converters.rs  data.rs  extractors.rs  main.rs  tools.rs
