[package]
name = "swiss_popular_election"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.14"
tokio = { version = "1.0", features = ["full"] }
regex = "1.11.1"
progress = "0.2.0"
csv = "1.3.1"
polars = { version = "0.44.2", features = ["csv"] }
